# caos-lunabotics-2026

./: .gitignore  DEBUGGING.md  Description.md  LICENSE  README.md  competition-rulebook.md  ros2.repos
src/: unitree_lidar_ros2
src/lunabotics_bringup/: CMakeLists.txt  README.md  package.xml
src/lunabotics_bringup/config/: elevation_mapping.yaml  nav2_params.yaml
src/lunabotics_bringup/launch/: laptop.launch.py  launch.py  launch_TK.py  launch_bench_mvp.launch.py  launch_jetson.py  launch_local.py  navigation.launch.py  robot.launch.py  tf_base_link.launch.py
src/lunabotics_bringup/rviz/: view.rviz
src/lunabotics_detection/: README.md  TESTING.md  package.xml  setup.cfg  setup.py
src/lunabotics_detection/config/: crater_detection.yaml
src/lunabotics_detection/launch/: crater_detection.launch.py
src/lunabotics_detection/lunabotics_detection/: crater_cloud_publisher_node.py  crater_detector_node.py  crater_visualizer_node.py
src/lunabotics_icp_localization/: CMakeLists.txt  README.md  package.xml
src/lunabotics_icp_localization/config/: icp_localization.yaml
src/lunabotics_icp_localization/include/lunabotics_icp_localization/: icp_localization_node.hpp
src/lunabotics_icp_localization/launch/: icp_localization.launch.py
src/lunabotics_icp_localization/src/: icp_localization_node.cpp
src/lunabotics_localization/: CMakeLists.txt  package.xml
src/lunabotics_localization/config/: ekf.yaml
src/lunabotics_localization/launch/: depth_scan.launch.py  localization.launch.py
src/lunabotics_mission/: README.md  package.xml  setup.cfg  setup.py
src/lunabotics_mission/config/: mission.yaml
src/lunabotics_mission/launch/: mission.launch.py
src/lunabotics_mission/lunabotics_mission/: mission_node.py
