<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabotics_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and RViz configuration for the lunabotics robot sensor stack.</description>
  <maintainer email="caos@lunabotics.local">caos</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>unitree_lidar_ros2</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
